--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background:  url('/assets/bg1.jpg') no-repeat;
+    background:  url('../assets/bg1.jpg') no-repeat;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
     background-position: center;
